# nng-apps

./: CMakeLists.txt  README.md  package.xml
client/: CMakeLists.txt  package.xml
client/src/: main.cpp
core/: CMakeLists.txt  package.xml
core/msgs/: free_fleet_msgs.proto
core/src/: Client.cpp  Client.hpp  old_client.cpp  utilities.hpp
msgs/: stringmsg.pb.h
nngcore/: CMakeLists.txt  package.xml
nngcore/include/nngcore/: Client.hpp  Server.hpp
nngcore/msgs/: CMakeLists.txt
nngcore/src/: Client.cpp  Server.cpp  main.cpp  utilities.hpp
server/: CMakeLists.txt  package.xml
server/src/: main.cpp
src/: client.cpp  run.sh  server.cpp  stringmsg.pb.cc
