<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nng-apps</name>
  <version>1.0.0</version>
  <description>Package for testing nng</description>
  <maintainer email="aaron@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>
  <author>Aaron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nng</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
